--- a/NeuralStyleTransfer/NST.ipynb
+++ b/NeuralStyleTransfer/NST.ipynb
@@ -2,13 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [],
    "source": [
     "import tensorflow as tf\n",
     "import numpy as np\n",
     "from matplotlib import pyplot as plt\n",
+    "import math\n",
     "from PIL import Image"
    ]
   },
@@ -114,20 +115,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 76,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Downloading data from https://github.com/fchollet/deep-learning-models/releases/download/v0.1/vgg19_weights_tf_dim_ordering_tf_kernels_notop.h5\n",
-      "80142336/80134624 [==============================] - 2s 0us/step\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "vgg = tf.keras.applications.VGG19(include_top = False, weights = \"imagenet\", pooling = \"avg\", input_shape = SHAPE)"
+    "vgg = tf.keras.applications.VGG19(include_top = False, weights = \"imagenet\", pooling = \"avg\", input_shape = SHAPE)\n",
+    "vgg.trainable = False"
    ]
   },
   {
@@ -173,16 +166,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Layers to use when computing the cost\n",
-    "content_layers = [\n",
-    "    ('block4_conv1', 0.2),\n",
+    "CONTENT_LAYERS = [\n",
+    "    ('block4_conv2', 0.2),\n",
     "]\n",
     "\n",
-    "style_layers = [\n",
+    "STYLE_LAYERS = [\n",
     "    ('block1_conv2', 0.2),\n",
     "    ('block2_conv2', 0.2),\n",
     "    ('block3_conv2', 0.2),\n",
@@ -193,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,10 +260,202 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<tensorflow.python.keras.engine.training.Model object at 0x0000020BE3E519C8>\n",
+      "(1, 600, 800, 64)\n",
+      "(1, 300, 400, 128)\n",
+      "(1, 150, 200, 256)\n",
+      "(1, 75, 100, 512)\n",
+      "(1, 37, 50, 512)\n",
+      "(75, 100, 512)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create a model for the style and the content using VGG\n",
+    "def vgg_model_output(layers):\n",
+    "    layer_outputs = []\n",
+    "    for layer, weight in layers:\n",
+    "        layer_outputs.append(vgg.get_layer(layer).output)\n",
+    "    return tf.keras.Model([vgg.input], layer_outputs)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "norm_content = normalize_data(content_array).reshape(1, SHAPE[0], SHAPE[1], SHAPE[2])\n",
+    "norm_style = normalize_data(style_array).reshape(1, SHAPE[0], SHAPE[1], SHAPE[2])\n",
+    "norm_gen_img = normalize_data(gen_img).reshape(1, SHAPE[0], SHAPE[1], SHAPE[2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 129,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a_gen_content_layers = vgg_model_output(CONTENT_LAYERS)(norm_gen_img)\n",
+    "a_gen_style_layers = vgg_model_output(STYLE_LAYERS)(norm_gen_img)\n",
+    "a_content_layers = vgg_model_output(CONTENT_LAYERS)(norm_content)\n",
+    "a_style_layers = vgg_model_output(STYLE_LAYERS)(norm_style)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 131,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "87631.805\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(), dtype=float32, numpy=87631.805>"
+      ]
+     },
+     "execution_count": 131,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Compute the cost of the content given the activations\n",
+    "def content_cost(a_gen_img, a_content_img):\n",
+    "    total_cost = 0\n",
+    "    for layer in range(0, len(a_gen_img)):\n",
+    "        # Get the output layer\n",
+    "        a_G_layer =  a_gen_img[layer] #tf.reshape(a_gen_img[layer], [1, a_gen_img[layer][0], a_gen_img[layer][1], a_gen_img[layer][2]])\n",
+    "        a_C_layer = a_content_img[layer] # tf.reshape(a_content_img[layer], 1, a_content_img[layer][0], a_content_img[layer][1], a_content_img[layer][2])\n",
+    "        \n",
+    "        # Get the dimensions\n",
+    "        n_H, n_W, n_C = a_G_layer.get_shape().as_list()\n",
+    "        \n",
+    "        # Unroll the activations\n",
+    "        unrolled_aG = tf.reshape(a_G_layer, [1, n_W * n_H, n_C])\n",
+    "        unrolled_aC = tf.reshape(a_C_layer, [1, n_W * n_H, n_C])\n",
+    "        \n",
+    "        # Compute the cots and add it to total_cost\n",
+    "        total_cost += 1/(4 * n_W * n_H * n_C) * tf.math.reduce_sum(tf.math.square(tf.subtract(unrolled_aG, unrolled_aC)))\n",
+    "    \n",
+    "    print(total_cost.numpy())\n",
+    "    return total_cost\n",
+    "        \n",
+    "#     for output in style_model(norm_style):\n",
+    "#         print(output.shape)\n",
+    "\n",
+    "#     for output in content_model(norm_content):\n",
+    "#         print(output.shape)\n",
+    "\n",
+    "#     for output in style_model(norm_gen_img):\n",
+    "#         print(output.shape)\n",
+    "\n",
+    "#     for output in content_model(norm_gen_img):\n",
+    "#         print(output.shape)\n",
+    "\n",
+    "content_cost(a_gen_content_layers, a_content_layers)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 140,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Compute the gram matrix\n",
+    "# Want to have the gram matrix in shape n_C by n_C\n",
+    "# Input matrix should be n_C x (n_W * n_H)\n",
+    "def compute_gram(matrix):\n",
+    "    return tf.linalg.matmul(matrix, tf.transpose(matrix))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 144,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Compute style cost on a layer\n",
+    "def style_cost_layer(a_gen_layer, a_style_layer, n_C, n_W, n_H):\n",
+    "    G_a_gen_layer = compute_gram(a_gen_layer)\n",
+    "    G_a_style_layer = compute_gram(a_style_layer)\n",
+    "    return (1/(4 * math.pow(n_C, 2) * math.pow(n_W * n_H, 2))) * tf.reduce_sum(tf.math.square(tf.math.subtract(G_a_gen_layer, G_a_style_layer)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 149,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Compute style cost on all of the out layers from the VGG19 model\n",
+    "def total_style_cost(a_gen_style_layers, a_style_layers):\n",
+    "    total_cost = 0.0\n",
+    "    for layer in range(0, len(a_gen_style_layers)):\n",
+    "        a_gen_style_layer = a_gen_style_layers[layer]\n",
+    "        a_style_layer = a_style_layers[layer]\n",
+    "        m, n_H, n_W, n_C = a_gen_style_layer.get_shape().as_list()\n",
+    "        a_gen_style_layer = tf.reshape(tf.transpose(a_gen_style_layer, perm=[3, 1, 2, 0]), shape=[n_C, n_W * n_H])\n",
+    "        a_style_layer = tf.reshape(tf.transpose(a_style_layer, perm=[3, 1, 2, 0]), shape=[n_C, n_W * n_H])\n",
+    "        total_cost += STYLE_LAYERS[layer][1] * style_cost_layer(a_gen_style_layer, a_style_layer, n_C, n_W, n_H)\n",
+    "    \n",
+    "    return total_cost\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 150,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(), dtype=float32, numpy=9117234000.0>"
+      ]
+     },
+     "execution_count": 150,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "total_style_cost(a_gen_style_layers, a_style_layers)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 148,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Compute the total cost\n",
+    "def total_cost(content_cost, style_cost, alpha = 10, beta = 40):\n",
+    "    return (alpha * content_cost) + (beta * style_cost)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def glue(gen_img):\n",
+    "    "
+   ]
   }
  ],
  "metadata": {
