finished cost functions

--- a/NeuralStyleTransfer_V2/NST_V2.ipynb
+++ b/NeuralStyleTransfer_V2/NST_V2.ipynb
@@ -2,14 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 215,
    "metadata": {},
    "outputs": [],
    "source": [
     "import tensorflow as tf\n",
     "import numpy as np\n",
     "from PIL import Image\n",
-    "from matplotlib import pyplot as plt"
+    "from matplotlib import pyplot as plt\n",
+    "import math"
    ]
   },
   {
@@ -270,15 +271,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 232,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class VGG_Prop():\n",
+    "class VGG_Prop(tf.keras.Model):\n",
     "    def __init__(self):\n",
-    "        #super(VGG_Prop, self).__init__()\n",
+    "        super(VGG_Prop, self).__init__()\n",
     "        self.gen_img = tf.Variable(add_noise_to_img(norm_content_array), name=\"gen_img\", dtype=tf.float32)\n",
-    "        print(self.gen_img.dtype)\n",
+    "        \n",
     "    def forward_pass_vgg_content(self):\n",
     "        return vgg_model_output(CONTENT_LAYERS)(self.gen_img)\n",
     "    \n",
@@ -288,14 +289,57 @@
     "    def compute_content_cost(self):\n",
     "        # Compute the content cost \n",
     "        # * Can confirm this works\n",
-    "        gen_img_activations = self.forward_pass_vgg_content()\n",
+    "        gen_img_content_activations = self.forward_pass_vgg_content()\n",
     "        m, n_H, n_W, n_C = gen_img_activations.get_shape().as_list()\n",
     "        \n",
     "        unrolled_content_activations = tf.reshape(content_activations[0], [m, n_W * n_H, n_C])\n",
-    "        unrolled_gen_img_activations = tf.reshape(gen_img_activations[0], [m, n_W * n_H, n_C])\n",
+    "        unrolled_gen_img_content_activations = tf.reshape(gen_img_content_activations[0], [m, n_W * n_H, n_C])\n",
     "        \n",
-    "        return (1/(4 * n_W * n_H * n_C)) * tf.math.reduce_sum(tf.math.square(tf.subtract(unrolled_content_activations, unrolled_gen_img_activations)))\n",
+    "        return (1/(4 * n_W * n_H * n_C)) * tf.math.reduce_sum(tf.math.square(tf.subtract(unrolled_content_activations, unrolled_gen_img_content_activations)))\n",
+    "    \n",
+    "    def compute_gram(self, matrix):\n",
+    "        return tf.matmul(matrix, tf.transpose(matrix))\n",
+    "    \n",
+    "    def style_layer_cost(self, gen_img_layer_activation, style_layer_activation):\n",
+    "        # Retrieve the dimensions from the activations\n",
+    "        m, n_H, n_W, n_C = gen_img_layer_activation.get_shape().as_list()\n",
+    "        \n",
+    "        gen_img_layer_activation = tf.reshape(tf.transpose(gen_img_layer_activation, perm=[3, 1, 2, 0]), shape=[n_C, -1])\n",
+    "        style_layer_activation = tf.reshape(tf.transpose(style_layer_activation, perm=[3, 1, 2, 0]), shape=[n_C, -1])\n",
+    "        \n",
+    "        gen_gram = self.compute_gram(gen_img_layer_activation)\n",
+    "        style_gram = self.compute_gram(style_layer_activation)\n",
+    "        \n",
+    "        return (1/(4 * n_C**2 * (n_H * n_W)**2)) * tf.math.reduce_sum(tf.math.square(tf.math.subtract(style_gram, gen_gram)))\n",
+    "    \n",
+    "    def style_total_cost(self):\n",
+    "        gen_img_style_activations = self.forward_pass_vgg_style()\n",
+    "        total_cost = 0.0\n",
+    "        for layer in range(0, len(gen_img_style_activations)):\n",
+    "            total_cost = tf.add(total_cost, tf.math.multiply(STYLE_LAYERS[layer][1], self.style_layer_cost(gen_img_style_activations[layer], style_activations[layer])))\n",
+    "            \n",
+    "        return total_cost\n",
+    "    \n",
+    "    def call(self):\n",
+    "        return \n",
     "        \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 233,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tf.Tensor(3774037800.0, shape=(), dtype=float32)\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = VGG_Prop()\n"
    ]
   },
   {
