the content cost at least does SOMETHING while the style cost has no effect

--- a/NeuralStyleTransfer_V1/NST.ipynb
+++ b/NeuralStyleTransfer_V1/NST.ipynb
@@ -522,6 +522,7 @@
     "        print(content_cost, style_cost, loss)\n",
     "\n",
     "    grad = tape.gradient(loss, gen_img)\n",
+    "    print(grad)\n",
     "    opt.apply_gradients([(grad, gen_img)])\n"
    ]
   },
