updated the readme with another update

--- a/ProductClassificationFastText/FastTextTest.ipynb
+++ b/ProductClassificationFastText/FastTextTest.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,13 +11,16 @@
     "import nltk\n",
     "from nltk.corpus import stopwords\n",
     "\n",
+    "import tensorflow as tf\n",
+    "from tensorflow.keras.layers import LSTM, Dense, Input\n",
+    "\n",
     "# Have to download the stopwords\n",
     "# nltk.download('stopwords')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -232,6 +235,21 @@
    ],
    "source": [
     "computer_df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Model Info\n",
+    "\n",
+    "For the model, we are going to use LSTMs with a Constrastive Loss Function \n",
+    "that will also be used to predict whether the two products are the same \n",
+    "\n",
+    "First, we have to convert the titles to embeddings through FastText before feeding into the LSTM.\n",
+    "The embedding part of this model will not be a layer because:\n",
+    "* The fasttext model would be time consuming and annoying to get to work with an embedding layer in Keras\n",
+    "* The fasttext model is not going to be getting its embeddings optimized, so there is really no point in adding it as an embedding layer"
    ]
   },
   {
