simplified preprocess and updated the readme

--- a/ProductClassificationFastText/FastTextTest.ipynb
+++ b/ProductClassificationFastText/FastTextTest.ipynb
@@ -89,21 +89,13 @@
     "        # Creates a new list of only elements that are not in the stop words\n",
     "        temp_title_left = []\n",
     "        for word in title_left:\n",
-    "            append_word = True\n",
-    "            for stop in to_stop:\n",
-    "                if (word == stop):\n",
-    "                    append_word = False\n",
-    "            if append_word:\n",
+    "            if word not in to_stop:\n",
     "                temp_title_left.append(word)\n",
     "                \n",
     "        # Creates a new list of only elements that are not in the stop words\n",
     "        temp_title_right = []\n",
     "        for word in title_right:\n",
-    "            append_word = True\n",
-    "            for stop in to_stop:\n",
-    "                if (word == stop):\n",
-    "                    append_word = False\n",
-    "            if append_word:\n",
+    "            if word not in to_stop:\n",
     "                temp_title_right.append(word)\n",
     "        \n",
     "        # Join the elements in the list to create the strings\n",
