created the neural network architecture

--- a/ProductClassificationFastText/FastTextTest.ipynb
+++ b/ProductClassificationFastText/FastTextTest.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
     "from nltk.corpus import stopwords\n",
     "\n",
     "import tensorflow as tf\n",
-    "from tensorflow.keras.layers import LSTM, Dense, Input\n",
+    "from tensorflow.keras.layers import LSTM, Dense, Input, Dropout\n",
     "\n",
     "# Have to download the stopwords\n",
     "# nltk.download('stopwords')"
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -140,91 +140,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>title_one</th>\n",
-       "      <th>title_two</th>\n",
-       "      <th>label</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>hp intel xeon x5560 prijzen tweakers</td>\n",
-       "      <td>495906 b21 hp x5560 2 80ghz ml350 g6</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>495906 b21 hp x5560 2 80ghz ml350 g6 new whole...</td>\n",
-       "      <td>495906 b21 hp x5560 2 80ghz ml350 g6</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>asus motherboard lga2066 ddr4 2 u atx 2xgbe pr...</td>\n",
-       "      <td>asus prime x299 deluxe</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>asus prime x299 deluxe prijzen tweakers</td>\n",
-       "      <td>asus prime x299 deluxe socket 2066 intel atx m...</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>asus prime x299 deluxe</td>\n",
-       "      <td>asus prime x299 deluxe socket lga2066 motherbo...</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                           title_one  \\\n",
-       "0               hp intel xeon x5560 prijzen tweakers   \n",
-       "1  495906 b21 hp x5560 2 80ghz ml350 g6 new whole...   \n",
-       "2  asus motherboard lga2066 ddr4 2 u atx 2xgbe pr...   \n",
-       "3            asus prime x299 deluxe prijzen tweakers   \n",
-       "4                             asus prime x299 deluxe   \n",
-       "\n",
-       "                                           title_two  label  \n",
-       "0               495906 b21 hp x5560 2 80ghz ml350 g6      1  \n",
-       "1               495906 b21 hp x5560 2 80ghz ml350 g6      1  \n",
-       "2                             asus prime x299 deluxe      1  \n",
-       "3  asus prime x299 deluxe socket 2066 intel atx m...      1  \n",
-       "4  asus prime x299 deluxe socket lga2066 motherbo...      1  "
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
    "source": [
     "computer_df.head()"
    ]
@@ -242,6 +165,74 @@
     "The embedding part of this model will not be a layer because:\n",
     "* The fasttext model would be time consuming and annoying to get to work with an embedding layer in Keras\n",
     "* The fasttext model is not going to be getting its embeddings optimized, so there is really no point in adding it as an embedding layer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def siamese_network(input_shape):\n",
+    "    # Defines our inputs\n",
+    "    left_title = Input(input_shape, dtype='float32')\n",
+    "    right_title = Input(input_shape, dtype='float32')\n",
+    "    \n",
+    "    # The LSTM units\n",
+    "    model = tf.keras.Sequential(name='siamese_network')\n",
+    "    model.add(LSTM(units=256, return_sequences=True, name='lstm_1'))\n",
+    "    model.add(Dropout(rate=0.3))\n",
+    "    model.add(LSTM(units=128, return_sequences=True, name='lstm_2'))\n",
+    "    model.add(Dropout(rate=0.3))\n",
+    "    model.add(LSTM(units=128, name='lstm_3'))\n",
+    "    model.add(Dropout(rate=0.3))\n",
+    "    \n",
+    "    # The dense layers\n",
+    "    model.add(Dense(units=1024, activation='relu', name='dense_1'))\n",
+    "    model.add(Dropout(rate=0.3))\n",
+    "    model.add(Dense(units=512, activation='relu', name='dense_2'))\n",
+    "    \n",
+    "    # Forward propagate through the model to generate the encodings\n",
+    "    encoded_left_title = model(left_title)\n",
+    "    encoded_right_title = model(right_title)\n",
+    "    \n",
+    "    # Create and return the network\n",
+    "    siamese_net = tf.keras.Model(inputs=[left_title, right_title], outputs=[encoded_left_title, encoded_right_title])\n",
+    "    return siamese_net"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"model_2\"\n",
+      "__________________________________________________________________________________________________\n",
+      "Layer (type)                    Output Shape         Param #     Connected to                     \n",
+      "==================================================================================================\n",
+      "input_15 (InputLayer)           [(None, 10, 300)]    0                                            \n",
+      "__________________________________________________________________________________________________\n",
+      "input_16 (InputLayer)           [(None, 10, 300)]    0                                            \n",
+      "__________________________________________________________________________________________________\n",
+      "siamese_network (Sequential)    (None, 512)          1555968     input_15[0][0]                   \n",
+      "                                                                 input_16[0][0]                   \n",
+      "==================================================================================================\n",
+      "Total params: 1,555,968\n",
+      "Trainable params: 1,555,968\n",
+      "Non-trainable params: 0\n",
+      "__________________________________________________________________________________________________\n"
+     ]
+    }
+   ],
+   "source": [
+    "max_len = 10\n",
+    "EMBEDDING_SIZE = 300\n",
+    "model = siamese_network((max_len, EMBEDDING_SIZE))\n",
+    "model.summary()"
    ]
   },
   {
