able to save embeddings and labels

--- a/ProductClassificationFastText/FastTextTest.ipynb
+++ b/ProductClassificationFastText/FastTextTest.ipynb
@@ -2,12 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     "import fasttext\n",
     "import pandas as pd\n",
+    "import numpy as np\n",
     "import nltk\n",
     "from nltk.corpus import stopwords\n",
     "\n",
@@ -140,14 +141,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>title_one</th>\n",
+       "      <th>title_two</th>\n",
+       "      <th>label</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>hp intel xeon x5560 prijzen tweakers</td>\n",
+       "      <td>495906 b21 hp x5560 2 80ghz ml350 g6</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>495906 b21 hp x5560 2 80ghz ml350 g6 new whole...</td>\n",
+       "      <td>495906 b21 hp x5560 2 80ghz ml350 g6</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>asus motherboard lga2066 ddr4 2 u atx 2xgbe pr...</td>\n",
+       "      <td>asus prime x299 deluxe</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>asus prime x299 deluxe prijzen tweakers</td>\n",
+       "      <td>asus prime x299 deluxe socket 2066 intel atx m...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>asus prime x299 deluxe</td>\n",
+       "      <td>asus prime x299 deluxe socket lga2066 motherbo...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                           title_one  \\\n",
+       "0               hp intel xeon x5560 prijzen tweakers   \n",
+       "1  495906 b21 hp x5560 2 80ghz ml350 g6 new whole...   \n",
+       "2  asus motherboard lga2066 ddr4 2 u atx 2xgbe pr...   \n",
+       "3            asus prime x299 deluxe prijzen tweakers   \n",
+       "4                             asus prime x299 deluxe   \n",
+       "\n",
+       "                                           title_two  label  \n",
+       "0               495906 b21 hp x5560 2 80ghz ml350 g6      1  \n",
+       "1               495906 b21 hp x5560 2 80ghz ml350 g6      1  \n",
+       "2                             asus prime x299 deluxe      1  \n",
+       "3  asus prime x299 deluxe socket 2066 intel atx m...      1  \n",
+       "4  asus prime x299 deluxe socket lga2066 motherbo...      1  "
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "computer_df.head()"
    ]
@@ -233,6 +311,131 @@
     "EMBEDDING_SIZE = 300\n",
     "model = siamese_network((max_len, EMBEDDING_SIZE))\n",
     "model.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_max_len():\n",
+    "    max_len = 0\n",
+    "    for row in computer_df.itertuples():\n",
+    "        if len(row.title_one.split(' ')) > max_len:\n",
+    "            max_len = len(row.title_one.split(' '))\n",
+    "            \n",
+    "        if len(row.title_two.split(' ')) > max_len:\n",
+    "            max_len = len(row.title_two.split(' '))\n",
+    "    \n",
+    "    return max_len\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MAX_LEN: 42 EMBEDDING_SHAPE: (300,) m: 68461\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "Definitions of some sizes in the training set\n",
+    "\"\"\"\n",
+    "# Returns the max word length in the entire training set\n",
+    "MAX_LEN = get_max_len()\n",
+    "EMBEDDING_SHAPE = fasttext_model['queen'].shape\n",
+    "m = len(computer_df)\n",
+    "print('MAX_LEN: ' + str(MAX_LEN), 'EMBEDDING_SHAPE: ' + str(EMBEDDING_SHAPE), 'm: ' + str(m))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "Create the numpy files of all the training embedddings\n",
+    "We will have two numpy files:\n",
+    "1. The training/validation/test sets\n",
+    "2. The labels\n",
+    "\"\"\"\n",
+    "\n",
+    "def create_embeddings(df):\n",
+    "    # Create the numpy arrays for storing the embeddings and labels\n",
+    "    total_embeddings = np.zeros(shape=(m, 2, MAX_LEN, EMBEDDING_SHAPE[0]))\n",
+    "    labels = np.zeros(shape=(m))\n",
+    "    \n",
+    "    # I know this is a terrible way of doing this, but iterate over the dataframe\n",
+    "    # and generate the embeddings to add to the numpy array\n",
+    "    for idx, row in enumerate(computer_df.itertuples()):\n",
+    "        for word_idx, word in enumerate(row.title_one.split(' ')):\n",
+    "            total_embeddings[idx, 0, word_idx] = fasttext_model[word]\n",
+    "            \n",
+    "        for word_idx, word in enumerate(row.title_two.split(' ')):\n",
+    "            total_embeddings[idx, 1, word_idx] = fasttext_model[word]\n",
+    "            \n",
+    "        labels[idx] = row.label\n",
+    "        \n",
+    "    return total_embeddings, labels\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def save_embeddings():\n",
+    "    embeddings, labels = create_embeddings(computer_df)\n",
+    "    with open('data/computers_numpy/embeddings.npy', 'wb') as f:\n",
+    "        np.save(f, embeddings)\n",
+    "\n",
+    "    with open('data/computers_numpy/labels.npy', 'wb') as f:\n",
+    "        np.save(f, labels)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def load_embeddings_and_labels():\n",
+    "    loaded_embeddings = None\n",
+    "    labels = None\n",
+    "    with open('data/computers_numpy/embeddings.npy', 'rb') as f:\n",
+    "        loaded_embeddings = np.load(f)\n",
+    "    \n",
+    "    with open('data/computers_numpy/labels.npy', 'rb') as f:\n",
+    "        labels = np.load(f)\n",
+    "    \n",
+    "    return loaded_embeddings, labels"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Embeddings shape: (68461, 2, 42, 300) Labels shape: (68461,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "embeddings, labels = load_embeddings_and_labels()\n",
+    "print('Embeddings shape: ' + str(embeddings.shape), 'Labels shape: ' + str(labels.shape))"
    ]
   },
   {
