--- a/ProductClassificationFastText/FastTextTest.ipynb
+++ b/ProductClassificationFastText/FastTextTest.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,23 +281,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"model_2\"\n",
+      "Model: \"model\"\n",
       "__________________________________________________________________________________________________\n",
       "Layer (type)                    Output Shape         Param #     Connected to                     \n",
       "==================================================================================================\n",
-      "input_15 (InputLayer)           [(None, 10, 300)]    0                                            \n",
+      "input_1 (InputLayer)            [(None, 42, 300)]    0                                            \n",
       "__________________________________________________________________________________________________\n",
-      "input_16 (InputLayer)           [(None, 10, 300)]    0                                            \n",
+      "input_2 (InputLayer)            [(None, 42, 300)]    0                                            \n",
       "__________________________________________________________________________________________________\n",
-      "siamese_network (Sequential)    (None, 512)          1555968     input_15[0][0]                   \n",
-      "                                                                 input_16[0][0]                   \n",
+      "siamese_network (Sequential)    (None, 512)          1555968     input_1[0][0]                    \n",
+      "                                                                 input_2[0][0]                    \n",
       "==================================================================================================\n",
       "Total params: 1,555,968\n",
       "Trainable params: 1,555,968\n",
@@ -307,7 +307,7 @@
     }
    ],
    "source": [
-    "max_len = 10\n",
+    "max_len = 42\n",
     "EMBEDDING_SIZE = 300\n",
     "model = siamese_network((max_len, EMBEDDING_SIZE))\n",
     "model.summary()"
@@ -404,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -412,7 +412,7 @@
     "    loaded_embeddings = None\n",
     "    labels = None\n",
     "    with open('data/computers_numpy/embeddings.npy', 'rb') as f:\n",
-    "        loaded_embeddings = np.load(f)\n",
+    "        loaded_embeddings = np.transpose(np.load(f), (1, 0, 2, 3))\n",
     "    \n",
     "    with open('data/computers_numpy/labels.npy', 'rb') as f:\n",
     "        labels = np.load(f)\n",
@@ -422,20 +422,93 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Embeddings shape: (68461, 2, 42, 300) Labels shape: (68461,)\n"
+      "Embeddings shape: (2, 68461, 42, 300) Labels shape: (68461,)\n"
      ]
     }
    ],
    "source": [
     "embeddings, labels = load_embeddings_and_labels()\n",
     "print('Embeddings shape: ' + str(embeddings.shape), 'Labels shape: ' + str(labels.shape))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Note: for the constrastive loss, because 0 denotes that they are from the same class\n",
+    "# and one denotes they are from a different class, I swaped the (Y) and (1 - Y) terms\n",
+    "\n",
+    "# Just chose this\n",
+    "margin = 2.0\n",
+    "def constrastive_loss(left_output, right_output, label):\n",
+    "    d = tf.reduce_sum(tf.square(left_output - right_output), 1)\n",
+    "    d_sqrt = tf.sqrt(d)\n",
+    "\n",
+    "    loss = label * d + (label - 1) * tf.square(tf.maximum(0., margin - d_sqrt)) \n",
+    "\n",
+    "    loss = 0.5 * tf.reduce_mean(loss)\n",
+    "    \n",
+    "    return loss"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(), dtype=float32, numpy=-0.035898395>"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "constrastive_loss(np.array([[2.0, 3.0, 4.0], [3.0, 4.0, 5.0]], dtype=np.float32), np.array([[3, 4, 5], [4, 5, 6]], dtype=np.float32), 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Accuracy metric for constrastive loss because values close to 0 are equal and values high are different\n",
+    "def constrastive_accuracy(ytrue, ypred):\n",
+    "    return tf.reduce_mean(tf.cast(tf.equal(ytrue, tf.cast(ypred < 0.5, ytrue.dtype)), ytrue.dtype))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(), dtype=float32, numpy=0.6666667>"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "constrastive_accuracy(np.array([1, 1, 0], dtype=np.float32), np.array([0.3, 1.324, 0.9], dtype=np.float32))"
    ]
   },
   {
